Fixed z-index on header

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ hr{
         -o-transition: .4s ease;
         text-align: center;
         transition: .4s ease;
+        z-index: 1;
     }
 
     .h1Brand{
